# scitex-decorators

./: .coverage.spartan-bm001_hpc_unimelb_edu_au.pid16357.X7nlqF1x.HNQIp837rWOh  .coverage.spartan-bm001_hpc_unimelb_edu_au.pid16358.X8GW11Ex.HNQIp837rWOh  .coverage.spartan-bm001_hpc_unimelb_edu_au.pid16975.XBSfJS7x.HNQIp837rWOh  .coverage.spartan-bm001_hpc_unimelb_edu_au.pid16976.XDtgTosx.HNQIp837rWOh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid301302.X4FBm2Ax.HNQIp837rWOh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid301701.X1dm9AMx.HNQIp837rWOh  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: docs.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  test.yml
docs/adr/: 0001-thin-reexport-of-deprecated.md
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_decorators/: __init__.py  _alternate_kwarg.py  _auto_order.py  _cache_disk.py  _cache_disk_async.py  _cache_simple.py  _converters.py  _deprecated.py  _partial_at.py  _signal_fn.py  _wrap.py
src/scitex_decorators/_cache/: _cache_disk.py  _cache_disk_async.py
src/scitex_decorators/_skills/scitex-decorators/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_decorators/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_decorators/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_decorators/_sphinx_html/.doctrees/api/: scitex_decorators.doctree
src/scitex_decorators/_sphinx_html/_modules/: index.html
src/scitex_decorators/_sphinx_html/_modules/scitex_compat/: _compat.html
src/scitex_decorators/_sphinx_html/_modules/scitex_decorators/: _auto_order.html  _batch_fn.html  _combined.html  _converters.html  _deprecated.html  _not_implemented.html  _numpy_fn.html  _pandas_fn.html  _preserve_doc.html  _signal_fn.html  _timeout.html  _torch_fn.html  _wrap.html  _xarray_fn.html
src/scitex_decorators/_sphinx_html/_modules/scitex_decorators/_cache/: _cache_disk.html  _cache_disk_async.html
src/scitex_decorators/_sphinx_html/_sources/: index.rst.txt
src/scitex_decorators/_sphinx_html/_sources/api/: scitex_decorators.rst.txt
src/scitex_decorators/_sphinx_html/api/: scitex_decorators.html
tests/: conftest.py  test_examples.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py
tests/scitex_decorators/: test__alternate_kwarg.py  test__auto_order.py  test__batch_fn.py  test__cache_disk.py  test__cache_disk_async.py  test__cache_mem.py  test__cache_simple.py  test__combined.py  test__converters.py  test__deprecated.py  test__lazy_imports.py  test__not_implemented.py  test__numpy_fn.py  test__pandas_fn.py  test__partial_at.py  test__preserve_doc.py  test__signal_fn.py  test__timeout.py  test__torch_fn.py  test__wrap.py  test__xarray_fn.py
tests/scitex_decorators/_cache/: test__cache_disk.py  test__cache_disk_async.py  test__cache_mem.py
