[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-decorators"
version = "0.1.10"
description = "Decorator library: numpy_fn/torch_fn/pandas_fn/xarray_fn/signal_fn type converters, caching, batching, deprecation — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "noreply@scitex.ai"}]
keywords = ["scitex", "decorators", "caching", "joblib", "numpy", "torch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "tqdm",
    "scitex-config>=0.3.0",
    # try_import_optional helper for gating heavy extras (torch/pandas/xarray).
    "scitex-dev>=0.11.7",
]

[project.optional-dependencies]
caching = [
    "joblib",
]
pandas = [
    "pandas",
]
torch = [
    "torch",
]
xarray = [
    "xarray",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "joblib",       # tests/scitex_decorators/_cache/test__cache_disk{,_async}.py
    "pandas",       # tests/scitex_decorators/test__{pandas,torch,xarray,signal,numpy,batch,auto_order,combined}_fn.py
    "torch",        # tests/scitex_decorators/test__{torch,pandas,xarray,signal,numpy,batch,auto_order,converters}_fn.py
    "xarray",       # tests/scitex_decorators/test__{xarray,pandas,torch,signal}_fn.py
    "scitex-dev>=0.11.7",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-decorators[caching]",
    "scitex-decorators[pandas]",
    "scitex-decorators[torch]",
    "scitex-decorators[xarray]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-decorators"
Repository = "https://github.com/ywatanabe1989/scitex-decorators"
Documentation = "https://scitex-decorators.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_decorators = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-decorators = "scitex_decorators"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
parallel = true
source = ["scitex_decorators"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "apps", "config", "docs", "examples"]
